# dbus

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.cmake  README.cygwin  README.win  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  dbus-1-uninstalled.pc  dbus-1-uninstalled.pc.in  dbus-1.pc  dbus-1.pc.in  index.html  libtool  params.json  project.config
autom4te.cache/: output.1  requests  traces.0  traces.1
bus/: .gitignore  Makefile  Makefile.am  Makefile.in  activation-helper.c  activation.c  activation.h  apparmor.c  apparmor.h  audit.c  audit.h  bus.c  bus.h  config-loader-expat.c  config-parser-common.c  config-parser-trivial.c  config-parser.c  config-parser.h  connection.c  connection.h  dbus.service  dbus.service.in  desktop-file.c  dir-watch-inotify.c  dir-watch-kqueue.c  dispatch.c  driver.c  driver.h  expirelist.c  main.c  org.freedesktop.dbus-session.plist.in  policy.c  policy.h  selinux.c  selinux.h  services.c  session.conf  session.conf.in  signals.c  signals.h  (+6 more)
bus/legacy-config/: session.conf.in  system.conf.in
bus/systemd-user/: dbus.service.in  dbus.socket.in
cmake/: CMakeLists.txt  ConfigureChecks.cmake  Doxyfile.cmake  config.h.cmake  i686-w64-mingw32.cmake  readme-cmake.txt
cmake/bus/: CMakeLists.txt
cmake/dbus/: CMakeLists.txt  dbus-arch-deps.h.cmake
cmake/doc/: CMakeLists.txt
cmake/modules/: CPackInstallConfig.cmake  FindDBusGLib.cmake  FindGLib2.cmake  Macros.cmake  MacrosAutotools.cmake
cmake/test/: CMakeLists.txt
cmake/test/name-test/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
dbus/: .gitignore  Makefile  Makefile.am  Makefile.in  dbus-address.c  dbus-address.h  dbus-arch-deps.h  dbus-asv-util.c  dbus-asv-util.h  dbus-auth-script.c  dbus-auth-util.c  dbus-auth.c  dbus-auth.h  dbus-authorization.c  dbus-authorization.h  dbus-bus.c  dbus-connection-internal.h  dbus-connection.c  dbus-connection.h  dbus-credentials-util.c  dbus-credentials.c  dbus-credentials.h  dbus-dataslot.c  dbus-file-win.c  dbus-hash.c  dbus-hash.h  dbus-internals.c  dbus-internals.h  dbus-keyring.c  dbus-list.c  dbus-list.h  dbus-macros.h  dbus-mainloop.c  dbus-mainloop.h  dbus-marshal-basic.c  dbus-marshal-basic.h  dbus-marshal-byteswap.c  dbus-marshal-header.c  dbus-marshal-header.h  dbus-marshal-recursive-util.c  (+74 more)
doc/: .gitignore  Makefile  Makefile.am  Makefile.in  dbus-api-design.duck  dbus-cleanup-sockets.1.xml  dbus-cleanup-sockets.1.xml.in  dbus-daemon.1.in  dbus-daemon.1.xml  dbus-daemon.1.xml.in  dbus-launch.1  dbus-launch.1.xml  dbus-launch.1.xml.in  dbus-monitor.1.xml  dbus-monitor.1.xml.in  dbus-run-session.1  dbus-run-session.1.xml.in  dbus-send.1  dbus-send.1.xml  dbus-send.1.xml.in  dbus-specification.xml  dbus-test-plan.xml  dbus-test-tool.1.xml.in  dbus-uuidgen.1.xml  dbus-uuidgen.1.xml.in  introspect.xsl
glib/: dbus-gproxy.c
mono/: Arguments.cs  Connection.cs  Service.cs
mono/DBusType/: ObjectPath.cs  String.cs
python/: Makefile.am  dbus_bindings.pyx.in
test/: .gitignore  Makefile  Makefile.am  Makefile.in  break-loader.c  corrupt.c  dbus-daemon-eavesdrop.c  dbus-daemon.c  fdpass.c  glib-tap-test.sh  loopback.c  manual-authz.c  manual-backtrace.c  manual-paths.c  marshal.c  monitor.c  relay.c  sd-activation.c  shell-test.c  spawn-test.c  syntax.c  test-dbus-daemon-fork.sh  test-dbus-launch-eval.sh  test-dbus-launch-x11.sh  test-names.c  test-segfault.c  test-service.c  test-shell-service.c  test-utils-glib.c  test-utils-glib.h  test-utils.c  test-utils.h  uid-permissions.c
test/data/: dbus-installed-tests.aaprofile.in
test/data/auth/: anonymous-server-successful.auth-script
test/data/invalid-service-files-system/: org.freedesktop.DBus.TestSuiteNoService.service  org.freedesktop.DBus.TestSuiteNoUser.service
test/data/systemd-activation/: com.example.SystemdActivatable3.service
test/data/valid-config-files/: .gitignore  debug-allow-all-sha1.conf  debug-allow-all-sha1.conf.cmake  debug-allow-all-sha1.conf.in  debug-allow-all.conf  debug-allow-all.conf.cmake  debug-allow-all.conf.in  forbidding.conf.in  many-rules.conf  systemd-activation.conf.in
test/data/valid-config-files-system/: debug-allow-all-fail.conf  debug-allow-all-fail.conf.cmake  debug-allow-all-fail.conf.in  debug-allow-all-pass.conf  debug-allow-all-pass.conf.cmake  debug-allow-all-pass.conf.in  many-rules.conf
test/data/valid-service-files/: org.freedesktop.DBus.TestSuite.PrivServer.service  org.freedesktop.DBus.TestSuiteEchoService.service  org.freedesktop.DBus.TestSuiteForkingEchoService.service  org.freedesktop.DBus.TestSuiteSegfaultService.service  org.freedesktop.DBus.TestSuiteShellEchoServiceFail.service  org.freedesktop.DBus.TestSuiteShellEchoServiceSuccess.service
test/data/valid-service-files-system/: org.freedesktop.DBus.TestSuiteEchoService.service  org.freedesktop.DBus.TestSuiteSegfaultService.service  org.freedesktop.DBus.TestSuiteShellEchoServiceFail.service  org.freedesktop.DBus.TestSuiteShellEchoServiceSuccess.service
test/internals/: printf.c  refs.c  syslog.c
test/name-test/: .gitignore  Makefile  Makefile.am  Makefile.in  run-test-systemserver.sh  run-test.sh  test-activation-forking.py  test-autolaunch.c  test-ids.c  test-pending-call-dispatch.c  test-pending-call-timeout.c  test-privserver-client.c  test-privserver.c  test-shutdown.c  test-threads-init.c  test-wait-for-echo.py  tmp-session-like-system.conf
tools/: .gitignore  Makefile  Makefile.am  Makefile.in  ci-build.sh  ci-install.sh  dbus-echo.c  dbus-launch-win.c  dbus-launch-x11.c  dbus-launch.c  dbus-launch.h  dbus-monitor.c  dbus-print-message.c  dbus-run-session.c  dbus-send.c  dbus-spam.c  dbus-update-activation-environment.c  dbus-uuidgen.c  lcov.am  run-with-tmp-session-bus.sh  test-tool.c  test-tool.h  tool-common.c  tool-common.h
